# Cookpilot

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: auth.py  auth_routes.py  create_db.py  database.py  main.py  models.py  openai_client.py  schemas.py
backend/app/utils/: email.py
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.js  Login.js  Signup.js  VerifyEmail.js  index.css
