[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yacinekouhli <yacine.kouhli@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
